tests/Rules/Structure/Fixtures/valid/h1_with_child_element.html.twig
<html>
  <head><title>Test</title></head>
  <body>
    <main>
      <h1><span>Page title in a span</span></h1>
    </main>
  </body>
</html>
