tests/Rules/Structure/Fixtures/invalid/no_h1.html.twig
{# 1 errors #}
<html>
  <head>
    <title>Page</title>
  </head>
  <body>
    <h2>Section</h2>
  </body>
</html>
